## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

ticodec_includedir = $(pkgincludedir)

ticodec_include_DATA = \
	ari.h\
	bitio.h\
	butterworth.h\
	color.h\
	daub97.h\
	errcodes.h\
	extend.h\
	nodelist.h\
	pbm.h\
	spiht.h\
	split.h\
	tilib.h

EXTRA_DIST = $(ticodec_include_DATA)
