## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CFLAGS =\
	 -Wall -Wimplicit -Wunused -Wmissing-prototypes\
	 -O3\
	 -g

bin_PROGRAMS = ticodec

ticodec_SOURCES = \
	ari.c\
	bitio.c\
	butterworth.c\
	color.c\
	daub97.c\
	extend.c\
	nodelist.c\
	pbm.c\
	spiht.c\
	split.c\
	ticodec.c\
	tilib.c

ticodec_LDFLAGS = 

ticodec_LDADD = 

